--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@
         <input name="Edad" class="form1" type="number" id="number" placeholder="Ingrese su Edad" min="6" max="100">
           </label>
 
-          <select name="servidor" id="dropdown" class="form1" aria-placeholder="Seleccione el Servidor mas Cercano">
-            <option value="servidor" class="text">LAS</option>
-            <option value="servidor" class="text">LAN</option>
-            <option value="servidor" class="text">NA</option>
         </div>
 
         <div class="casillas">
           <div class="radio">
-            <h2 class="text">Selecciona tu genero</h2>
+            <div class="genero">
+              <h2 class="text">Selecciona tu genero</h2>
+            </div>
 
                 <label for="Hombre" class="form1">
               <input type="radio" name="radio" id="Hombre" > 
@@ -59,33 +57,55 @@
 
             <div class="checkbox">
 
-              <h3 class="text">Que te atrae de una persona (puedes seleccionar varias opciones)?</h3>
+              <h3 class="text">Que te atrae de una persona?(puedes seleccionar varias opciones)</h3>
 
+                    <div class="filas">
+                <label for="bonita personalidad" class="form1">
               <input type="checkbox" value="checkbox" id="bonita personalidad">       
-              <label for="bonita personalidad" class="form1">bonita personalidad</label>    
+                bonita personalidad</label>   
 
+                <label for="guap@" class="form1">
               <input type="checkbox" value="checkbox" id="guap@">       
-              <label for="guap@" class="form1">guap@</label>    
+                guap@</label>    
 
+                <label for="atractiv@" class="form1">
               <input type="checkbox" value="checkbox" id="atractiv@">       
-              <label for="atractiv@" class="form1">atractiv@</label>    
+                atractiv@</label>  
+                    </div>  
 
+                    <div class="filas">
+                <label for="divertid@" class="form1">
               <input type="checkbox" value="checkbox" id="divertid@">       
-              <label for="divertid@" class="form1">divertid@</label>    
+                divertid@</label>   
 
+                <label for="detallista" class="form1">
               <input type="checkbox" value="checkbox" id="detallista">       
-              <label for="detallista" class="form1">detallista</label>    
+                detallista</label>   
+
+                <label for="cariños@" class="form1">
+              <input type="checkbox" value="checkbox" id="cariños@">       
+                  cariños@</label>
+                    </div> 
 
             </div>
 
             <div class="text-area">
-
+               
               <h4 class="text">Comentarios</h4>
 
               <input type="textarea" id="textarea" placeholder="Ingrese aqui una pequeña opinion de nuestra pagina :D">
 
             </div>
-        </div>
+
+            <div class="servidor">
+              <p class="text">Selecciona el servidor mas cercano a ti</p>
+            <select name="servidor" id="dropdown" class="form1" aria-placeholder="Seleccione el Servidor mas Cercano">
+              <option value="servidor" class="text">LAS</option>
+              <option value="servidor" class="text">LAN</option>
+              <option value="servidor" class="text">NA</option>
+            </div>
+
+          </div>
 
             <div class="submitarea">
 
